# JonaNoackIgnite

./: .gitignore  ALGORITHM.md  Cargo.toml  Ignite.spec  LICENSE  README.md  SCHRIFTLICHE_ARBEIT_JUGEND_FORSCHT.html  SCHRIFTLICHE_ARBEIT_JUGEND_FORSCHT.md  SCHRIFTLICHE_ARBEIT_JUGEND_FORSCHT.tex  ast.txt  ast_dump.py  audit_log.py  build_setup.ps1  compile_latex_pdf.py  config.py  convert_markdown_to_pdf.py  dataset_evaluator.py  generate_diagrams.py  generate_documentation_assets.py  generate_gui_screenshot.py  generate_high_quality_diagrams.py  generate_more_diagrams.py  gui.py  ignite_installer.iss  image_processing.py  jufo_paper_style.css  main.py  pyproject.toml  quellen.bib  remove_comments.py  requirements.txt  settings.json  storage.py  utils.py  verify_installation.py  zeilencheck.py
.github/workflows/: build_wheels.yml  release.yml
gui/: __init__.py  main_window.py  theme.py  utils_ui.py
gui/components/: __init__.py  controls_panel.py  header.py  thermal_canvas.py
gui/services/: __init__.py  export_service.py  processing_service.py
gui/views/: __init__.py  analysis.py  dashboard.py  dialogs.py
gui/widgets/: __init__.py  cards.py
ignite-landing/: index.html  package-lock.json  package.json
ignite-landing/src/: main.js  style.css
ignite_steps_output/: WhatsApp Image 2026-03-18 at 16.58.15_step1_original.npy  WhatsApp Image 2026-03-18 at 16.58.15_step2_mask.npy  WhatsApp Image 2026-03-18 at 16.58.15_step3_local_heat_diff_raw.npy  WhatsApp Image 2026-03-18 at 16.58.15_step4_dynamic_hotspots_raw.npy
src/: lib.rs
tests/: test_evaluation.py  test_parity.py  test_rust_core.py  test_utils.py
